cmd/order-middleware/k8s/03-strip-prefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-order-middleware-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /api/order-middleware
