cmd/order-middleware/k8s/02-order-middleware.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-middleware
  namespace: kube-system
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-middleware
  template:
    metadata:
      labels:
        app: order-middleware
    spec:
      containers:
        - name: order-middleware
          image: uhub.service.ucloud.cn/entropypool/order-middleware:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: service-config
              mountPath: /etc/OrderMiddleware
      volumes:
        - name: service-config
          configMap:
            name: order-middleware-config
            items:
              - key: service-conf
                path: OrderMiddleware.viper.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: order-middleware
  namespace: kube-system
spec:
  ports:
    - name: http
      port: 50440
      targetPort: 50440
    - name: grpc
      port: 50441
      targetPort: 50441
    - name: healthz
      port: 50442
      targetPort: 50442
    - name: prometheus
      port: 50443
      targetPort: 50443
  selector:
    app: order-middleware
