cmd/order-middleware/k8s/05-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: order-middleware-traefik-app-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: order-middleware-traefik-app
    k8s.kuboard.cn/workload: order-middleware-traefik-app
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-strip-order-middleware-prefix@kubernetescrd,
      kube-system-common-headers@kubernetescrd,
      kube-system-headers-appid-to-body@kubernetescrd,
      kube-system-headers-userid-to-body@kubernetescrd,
      kube-system-headers-app-login-token-to-body@kubernetescrd,
      kube-system-app-user-role-rbac-auth@kubernetescrd
spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/ordermw/v1/compensate_CreateCompensate
            backend:
              serviceName: order-middleware
              servicePort: 50440
          - path: /api/ordermw/v1/compensate_UpdateCompensate
            backend:
              serviceName: order-middleware
              servicePort: 50440
          - path: /api/ordermw/v1/compensate_GetCompensate
            backend:
              serviceName: order-middleware
              servicePort: 50440
          - path: /api/ordermw/v1/compensate_DeleteCompensate
            backend:
              serviceName: order-middleware
              servicePort: 50440
          - path: /api/ordermw/v1/outofgas_CreateOutOfGas
            backend:
              serviceName: order-middleware
              servicePort: 50440
          - path: /api/ordermw/v1/outofgas_UpdateOutOfGas
            backend:
              serviceName: order-middleware
              servicePort: 50440
          - path: /api/ordermw/v1/outofgas_GetOutOfGas
            backend:
              serviceName: order-middleware
              servicePort: 50440
          - path: /api/ordermw/v1/outofgas_DeleteOutOfGas
            backend:
              serviceName: order-middleware
              servicePort: 50440
          - path: /api/ordermw/v1/order_UpdateOrder
            backend:
              serviceName: order-middleware
              servicePort: 50440
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules
    - host: api.ohhash.com
      http: *http_rules
    - host: api.development.npool.top
      http: *http_rules
